# lestagames.tfidf

./: readme.md
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/config/: celery.py  settings.py  urls.py
backend/core/: models.py  serializers.py  tasks.py  views.py
backend/core/migrations/: 0001_initial.py
frontend/: Dockerfile  docker-compose.yml
frontend/src/: App.vue
frontend/src/components/: TfidfUploader.vue
